--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/tinker": "^2.8",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "twbs/bootstrap": "5.3.3",
-        "twbs/bootstrap-icons": "*"
+        "twbs/bootstrap-icons": "*",
+        "webpatser/laravel-uuid": "^4.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
